syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jiahaowu.balancer.server.comm";

package comm;

service ConnectionService {
    // allow nodes join the cluster
    rpc JoinCluster(JoinRequest) returns(JoinResponse) {}
}

message JoinRequest {
    string hostname = 1;
    double performance = 2;
}

message JoinResponse {
    int32 id = 1;
    int32 nodeCount = 2;
}



